Bug 259744 - datetime for last-modification-date violating the Kolab Format adding a +00:00
Summary: datetime for last-modification-date violating the Kolab Format adding a +00:00
Status: VERIFIED FIXED
Alias: None
Product: KDE PIM Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Microsoft Windows CE
: HI major
Target Milestone: ---
Assignee: Ludwig Reiter
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-13 16:34 UTC by Bernhard E. Reiter
Modified: 2011-02-18 10:43 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard E. Reiter 2010-12-13 16:34:26 UTC
Version:           unspecified
OS:                Windows CE

When creating a Groupware object, e.g an event, the last-modification-time
violates the Kolab Format for Storage 2.0: http://kolab.org/doc/kolabformat-2.0-html/x147.html#AEN167
only allows for YYYY-MM-DDThh:mm:ssZ, but created appointmens 
with Windows CE from CAB 20101213 create something with "+00:00" instead of the "Z", example:

<event version=3D"1.0">
 <product-id>Akonadi 1.4.81, Kolab resource</product-id>
 <uid>libkcal-20878.51</uid>
 <creation-date>2010-12-13T15:26:09Z</creation-date>
 <last-modification-date>2010-12-13T15:26:09+00:00</last-modification-d=
ate>

the defect also shows on other platforms.

Reproducible: Always


Actual Results:  
Create the object in a kolab folder, look at the raw stored object.
Comment 1 Bernhard E. Reiter 2010-12-13 16:35:39 UTC
Cna also be seen with Kontact Desktop E5: kdepim
Version: 4:4.5~e5.20101112.1197730-kk4.1198061
Comment 2 Tobias Koenig 2010-12-15 11:25:43 UTC
Hej,

The code that creates the last-modifcation-date tag looks basically like this:
  lastModified().toZone( mZone ).toString( KDateTime::ISODate )
where lastModified() returns a KDateTime object and mZone is the KTimeZone object of this calendar.
Although '+00:00' seems to be identically to 'Z' from a logical point of view there is some difference (that I didn't get) according to the RFC.

@John can you shed some light on this issue? Has something changed in the time handling/formatting code lately?

Ciao,
Tobias
Comment 3 Bernhard E. Reiter 2010-12-15 11:29:08 UTC
the point is that the Kolab Storage format 2.0 does not allow to deviate 
from the 'Z' variant. The defect might be in there for a long while maybe since
KDE SC 4.0 was coming up.
Comment 4 Tobias Koenig 2010-12-15 12:00:24 UTC
SVN commit 1206670 by tokoe:

Always write out the creation-date and last-modification-date
in Zulu time to be compatible with Kolab storage format.

BUG: 259744


 M  +2 -3      kolabbase.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1206670
Comment 5 Ludwig Reiter 2011-02-18 10:43:53 UTC
Kontact Touch Windows CE 2011-02-11

Looked at the kolab.xml of a new created event.
It contains Z in dates. Okay.