Always write out the creation-date and last-modification-date in Zulu time to be compatible with Kolab storage format.

BUG: 259744

svn path=/trunk/KDE/kdepim/runtime/; revision=1206670